--- a/assets/style.css
+++ b/assets/style.css
@@ -261,6 +261,38 @@ input[type='submit'] {
   background-color: #beb45a;
   padding: 0.5em 1em;
 }
+footer {
+  background-color: #fff;
+  color: black;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+footer .footer_left {
+  width: 100%;
+  padding: 2em;
+}
+.footer_left ul {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+footer .footer_right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
+  width: 100%;
+}
+.footer_right p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
 
 @media all and (max-width: 1180px) {
   .picture {
@@ -373,5 +405,10 @@ input[type='submit'] {
   }
   .picture {
     width: 80%;
+  }
+  footer {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 }
